--- a/Reproduzindo PaginaYoutube/style.css
+++ b/Reproduzindo PaginaYoutube/style.css
@@ -122,3 +122,54 @@ i{
     cursor: pointer;
     margin-right: 10px;
 }
+
+.sidebar{
+    position: fixed;
+    left: 0px;
+    top: 60px;
+    width: 240px;
+    height: auto;
+    padding-right: 10px;
+    color: rgba(255, 255, 255,0.8);
+}
+.sidebar .links{
+    padding-bottom: 15px;
+    border-bottom: 1px solid gray;
+}
+
+.sidebar .links-2{
+    padding-top: 15px;
+}
+
+.sidebar .links .icon{
+    display: flex;
+    align-items: center;
+    padding: 10px 24px;
+    height: 45px;
+    cursor: pointer;
+}
+
+.sidebar .links .icon:hover{
+    background: rgb(87, 82, 82);
+}
+
+.sidebar .links .icon a{
+    text-decoration: none;
+    color: white;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+}
+
+.sidebar .links .icon a i{
+    margin-right: 20px;
+    font-size: 22px;
+}
+
+.sidebar .subscriptions{
+    border-bottom: none;
+}
+
+.sidebar .subscriptions h4{
+    padding: 10px 24px;
+}
