--- a/Reproduzindo PaginaYoutube/style.css
+++ b/Reproduzindo PaginaYoutube/style.css
@@ -173,3 +173,76 @@ i{
 .sidebar .subscriptions h4{
     padding: 10px 24px;
 }
+
+.content{
+    position: absolute;
+    left: 240px;
+    top: 60px;
+    width: calc(100% - 240px);
+    height: 91vh;
+    background: #181818;
+}
+
+.videos{
+    display: flex;
+    flex-wrap: wrap;
+    margin:  20px 0 0 20px;
+}
+
+.videos .video{
+    width: 250px;
+    height: 240px;
+    margin: 0 8px 30px 8px;
+    cursor: pointer;
+}
+
+.video .thumbnail{
+    width: 100%;
+    height: 144px;
+    position: relative;
+}
+
+.video .thumbnail img{
+    width: 100%;
+    height: 100%;
+}
+
+.video .thumbnail .minit{
+    position: absolute;
+    right: 5px;
+    bottom: 5px;
+    font-size: 14px;
+    width: auto;
+    height: 20px;
+    padding: 2px 3px;
+    border-radius: 3px;
+    background: #222;
+    color: white;
+}
+
+.video .video-info{
+    display: flex;
+    margin: 10px 0;
+}
+
+.video .video-info .user img{
+    width: 40px;
+    cursor: pointer;
+    margin: 0 10px 0 2px;
+}
+
+.video .video-info .text{
+    display: flex;
+    flex-direction: column;
+    color: rgba(255, 255, 255,0.5);
+}
+
+.video .video-info .text .title{
+    color: white;
+    margin-bottom: 5px;
+}
+
+.video .video-info .text .views::after{
+    content: "•";
+    margin: 0 4px;
+}v  
